src/test/ui/parser/issue-68890.stderr
error: `?` may only modify trait bounds, not lifetime bounds
  --> $DIR/issue-68890.rs:1:11
   |
LL | enum e{A((?'a a+?+l))}
   |           ^

error: missing separator `,`
  --> $DIR/issue-68890.rs:1:16
   |
LL | enum e{A((?'a a+?+l))}
   |          -     ^
   |          |
   |          while parsing the list starting here

error: expected item, found `)`
  --> $DIR/issue-68890.rs:1:21
   |
LL | enum e{A((?'a a+?+l))}
   |                     ^ expected item

error: aborting due to 3 previous errors

